Bug 368549 - Do we need add as launcher and add to panel
Summary: Do we need add as launcher and add to panel
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.7.3
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-10 13:07 UTC by andreas
Modified: 2018-08-20 14:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
kainz.a: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreas 2016-09-10 13:07:17 UTC
In kicker you can add apps to launcher and to panel the only difference is that if you add an app to panel you can move the app icon cause it's a plasmoid.

is it really needed it look a bit more complex than needed.

Reproducible: Always
Comment 1 Eike Hein 2016-09-11 05:49:24 UTC
They behave differently:

(a) "Add to Task Manager" is only available if Kicker can find a "Task Manager" widget on the same contaiment (i.e. panel) and asks that widget to add a launcher for the URL. The Task Manager's launchers disappear when a window appears.

(b) "Add to Panel" adds an Icon widget for the URL to the containment Kicker is on.

I agree the labels are bad because you can't tell from them what they do.

My proposal would be either:

(1) Use "Add as widget" and "Add to Task Manager"

or

(b) Rename "Show a launcher when not running" in the Task Manager to "Pin" and use "Add as widget" and "Pin to Task Manager"
Comment 2 Kai Uwe Broulik 2016-09-11 18:57:27 UTC
+1 for renaming the cumbersome "show launcher when not running" to a simple "Pin to task bar" (or similar)
Comment 3 andreas 2017-01-02 23:53:39 UTC
+1 for Pin to task bar
Comment 4 Eike Hein 2017-01-03 11:39:32 UTC
k, will do patch tomorrow-ish for 5.9, Marco also +1'd on IRC.
Comment 5 Eike Hein 2017-01-04 08:33:22 UTC
Proposed patch: https://phabricator.kde.org/D3948

Summary:

- "Pin" in task managers
- "Add to Panel (Widget)" and "Pin to Task Manager" in launchers
Comment 6 Eike Hein 2017-01-05 05:17:06 UTC
Git commit fc24edd139dd8e75a58b9f6b560a3752ad9452be by Eike Hein.
Committed on 05/01/2017 at 05:16.
Pushed by hein into branch 'master'.

Add-app-to-panel string overhaul.

Summary:
- Get rid of the unwieldy "Show a launcher when not running" and use Pin instead
- Clarify that "Add to Panel" adds a widget to distinguish from adding to Task Manager
- Use "Pin to Task Manager" in launchers as well

Often-discussed, often-desired, VDG-approved.

Reviewers: #plasma, mart, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3948

M  +2    -2    applets/kicker/plugin/actionlist.cpp
M  +2    -2    applets/taskmanager/package/contents/ui/ContextMenu.qml

https://commits.kde.org/plasma-desktop/fc24edd139dd8e75a58b9f6b560a3752ad9452be