Add-app-to-panel string overhaul.

Summary:
- Get rid of the unwieldy "Show a launcher when not running" and use Pin instead
- Clarify that "Add to Panel" adds a widget to distinguish from adding to Task Manager
- Use "Pin to Task Manager" in launchers as well

Often-discussed, often-desired, VDG-approved.

BUG:368549

Reviewers: #plasma, mart, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3948